# METIS-scivision

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: GitSubmodule.cmake
conf/: gkbuild.cmake
src/GKlib/: CMakeLists.txt
src/libmetis/: CMakeLists.txt
